# spin-trigger-mqtt

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  release-process.md  spin-mqtt.wit  spin-pluginify.toml  trigger-mqtt-local.json  trigger-mqtt-remote.json  trigger-mqtt.json
.devcontainer/: bootstrap.sh  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yaml
docs/: plugin-development.md
examples/mqtt-app/: Cargo.toml  spin.toml
examples/mqtt-app/src/: lib.rs
examples/mqtt-app/wit/: config.wit
examples/redis-app/: Cargo.toml  spin.toml
sdk/: Cargo.toml
sdk/macro/: Cargo.toml
sdk/macro/src/: lib.rs
sdk/src/: lib.rs
src/: lib.rs  main.rs
templates/mqtt-rust/content/: Cargo.toml  Cargo.toml.tmpl  spin.toml
templates/mqtt-rust/content/src/: lib.rs
templates/mqtt-rust/metadata/: spin-template.toml
