[package]
name = "trigger-mqtt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3.25"
serde = "1.0.188"
spin-app = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-core = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-expressions = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-factors = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-runtime-factors = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-trigger = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-telemetry = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
spin-factor-variables = { git = "https://github.com/fermyon/spin", rev = "b2692def9f322f33b24c56aa3f9b6cc969ba29e8" }
tokio = { version = "1.37", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
wasmtime = { version = "22.0" }

[workspace]
members = ["sdk", "sdk/macro"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
wit-bindgen = "0.16.0"
