[package]
name = "trigger-mqtt"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
anyhow = "1.0.68"
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3.25"
serde = "1.0.188"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-expressions = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-factors = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-runtime-factors = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-telemetry = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-factor-variables = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
tokio = { version = "1.37", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
wasmtime = { version = "25.0" }

[workspace]
members = ["sdk", "sdk/macro"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
wit-bindgen = "0.16.0"
