[package]
name = "mqtt-app"
authors = ["Suneet Nangia <suneetnangia@gmail.com>"]
description = "Demo app to send and receive MQTT messages."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# spin-core = { git = "https://github.com/fermyon/spin" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2405a79c74c5d61b9bc88c378d475c6c21ed6a9f" }

[workspace]
