[package]
name = "mqtt-app"
authors = ["Suneet Nangia <suneetnangia@gmail.com>"]
description = "Demo app to send and receive MQTT messages."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
chrono = "*"
spin-mqtt-sdk = { path = "../../sdk" }


[workspace]
