[package]
name = "{{project-name | kebab_case}}"
authors = ["{{authors}}"]
description = "{{project-description}}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
chrono = "*"
spin-mqtt-sdk = { git = "https://github.com/spinkube/spin-mqtt-trigger-sdk"}

[workspace]